--- a/ios/CwBudgetTracker/LaunchScreen.storyboard
+++ b/ios/CwBudgetTracker/LaunchScreen.storyboard
@@ -21,7 +21,15 @@
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="36"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Powered by React Native" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="MN2-I3-ftu">
+                            <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AppLogo" translatesAutoresizingMaskIntoConstraints="NO" id="IMG-ICON-1">
+                                <rect key="frame" x="127.5" y="261" width="120" height="120"/>
+                            </imageView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="LDG-LBL-1">
+                                <rect key="frame" x="0.0" y="389" width="375" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Powered by CW Media Studio" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="MN2-I3-ftu">
                                 <rect key="frame" x="0.0" y="626" width="375" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
@@ -35,6 +43,12 @@
                             <constraint firstItem="MN2-I3-ftu" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" id="i1E-0Y-4RG"/>
                             <constraint firstItem="GJd-Yh-RWb" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="bottom" multiplier="1/3" constant="1" id="moa-c2-u7t"/>
                             <constraint firstItem="GJd-Yh-RWb" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" symbolic="YES" id="x7j-FC-K8j"/>
+                            <constraint firstItem="IMG-ICON-1" firstAttribute="top" secondItem="GJd-Yh-RWb" secondAttribute="bottom" constant="16" id="cns-top-icon"/>
+                            <constraint firstItem="IMG-ICON-1" firstAttribute="centerX" secondItem="Bcu-3y-fUS" secondAttribute="centerX" id="cns-centerx-icon"/>
+                            <constraint firstItem="LDG-LBL-1" firstAttribute="top" secondItem="IMG-ICON-1" secondAttribute="bottom" constant="12" id="cns-top-loading"/>
+                            <constraint firstItem="LDG-LBL-1" firstAttribute="centerX" secondItem="Bcu-3y-fUS" secondAttribute="centerX" id="cns-centerx-loading"/>
+                            <constraint firstItem="IMG-ICON-1" firstAttribute="height" secondItem="IMG-ICON-1" secondAttribute="width" multiplier="1:1" id="cns-square-icon"/>
+                            <constraint firstItem="IMG-ICON-1" firstAttribute="width" secondItem="nil" secondAttribute="notAnAttribute" constant="120" id="cns-width-icon"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Bcu-3y-fUS"/>
                     </view>
